--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,20 @@
-[package]
-name = "compress"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "compress_utils",
+    "wgpu_compress_32",
+    "compressapi"
+]
+resolver = "2"
 
-[lib]
-name = "compress"
-path = "src/lib.rs"
-
-[[bin]]
-name = "compresapi"
-path = "src/main.rs"
-
-[dependencies]
-anyhow = "1.0.89"
-itertools = "0.13.0"
-tracing-subscriber = "0.3.18"
-tracing = "0.1.40"
-log = "0.4.22"
-tokio = { version = "1.40.0", features = ["full"] }
-rand = "0.8.5"
-env_logger = "0.11.5"
-bytemuck = { version = "1.18.0", features = ["derive"] }
-flume = "0.11.0"
-pollster = "0.4.0"
+[workspace.dependencies]
 wgpu = { version = "23.0.0", default-features = false, features = [
     "wgsl",
     "dx12",
     "replay"
 ] }
 wgpu-types = "23.0.0"
-bit-vec = "0.8.0"
 async-trait = "0.1.83"
+bit-vec = "0.8.0"
+anyhow = "1.0.93"
+itertools = "0.13.0"
+log = "0.4.22"
