--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ anyhow = "1.0.93"
 itertools = "0.13.0"
 log = "0.4.22"
 dotenv = "0.15.0"
+tracing-subscriber = { version = "0.3.19", features = ["tracing-log"] }
+tracing = "0.1.41"
