--- a/wgpu_compress_32_batched/Cargo.toml
+++ b/wgpu_compress_32_batched/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 compress_utils = { path = "../compress_utils" }
+wgpu_compress_32 = { path = "../wgpu_compress_32" }
 anyhow = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
@@ -17,4 +18,6 @@ bit-vec = { workspace = true }
 async-trait = { workspace = true }
 pollster = "0.4.0"
 dotenv = { workspace = true }
-env_logger = "0.11.5"
+#env_logger = "0.11.5"
+tracing-subscriber = { workspace = true }
+tracing = "0.1.41"
