--- a/compress_utils/Cargo.toml
+++ b/compress_utils/Cargo.toml
@@ -17,3 +17,4 @@ bit-vec = { workspace = true }
 wgpu = { workspace = true }
 wgpu-types = { workspace = true }
 async-trait = { workspace = true }
+thiserror = { workspace = true }
