--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 old_code/
 /output_diff
 /city_temperature.csv
+/wgpu_compress_32_batched/output1.log
+/wgpu_compress_32_batched/output2.log
+/wgpu_compress_32_batched/run.log
+/run.log
