--- a/wgpu_compress_32_batched/Cargo.toml
+++ b/wgpu_compress_32_batched/Cargo.toml
@@ -9,7 +9,7 @@ wgpu_compress_32 = { path = "../wgpu_compress_32" }
 anyhow = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
-bytemuck = { version = "1.19.0", features = ["derive"] }
+bytemuck = { version = "1.21.0", features = ["derive"] }
 wgpu = { workspace = true }
 wgpu-types = { workspace = true }
 bit-vec = { workspace = true }
@@ -17,3 +17,4 @@ async-trait = { workspace = true }
 pollster = "0.4.0"
 tracing-subscriber = { workspace = true }
 tracing = "0.1.41"
+thiserror = { workspace = true }
