--- a/wgpu_compress_32_batched/Cargo.toml
+++ b/wgpu_compress_32_batched/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 compress_utils = { path = "../compress_utils" }
-wgpu_compress_32 = { path = "../wgpu_compress_32" }
 anyhow = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
@@ -15,6 +14,7 @@ wgpu-types = { workspace = true }
 bit-vec = { workspace = true }
 async-trait = { workspace = true }
 pollster = "0.4.0"
-tracing-subscriber = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tracing = "0.1.41"
 thiserror = { workspace = true }
+indicatif = "0.17.9"
