removed temp files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ old_code/
 /wgpu_compress_32_batched/run.log
 /run.log
 /wgpu_compress_32_batched/output2.log
+/wgpu_compress_32_batched/1.txt
+/wgpu_compress_32_batched/2.txt
