--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "compress_utils",
     "wgpu_compress_32",
     "wgpu_compress_32_batched",
+    "wgpu_compress_64_batched",
     "compressapi"
 ]
 resolver = "2"
