--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ members = [
     "compress_utils",
     "wgpu_compress_32",
     "wgpu_compress_32_batched",
+    "wgpu_compress_64_batched",
     "compressapi"
 ]
 resolver = "2"
 
 [workspace.dependencies]
-wgpu = { version = "25.0.0", default-features = false, features = [
+wgpu = { version = "25.0.2", default-features = false, features = [
     "wgsl",
     "glsl",
     "vulkan",
