--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 compress_utils = { path = "../compress_utils" }
 wgpu_compress_32 = { path = "../wgpu_compress_32" }
 wgpu_compress_32_batched = { path = "../wgpu_compress_32_batched" }
+wgpu_compress_64_batched = { path = "../wgpu_compress_64_batched" }
 log = { workspace = true }
 async-trait = { workspace = true }
 pollster = { workspace = true }
