--- a/wgpu_compress_32_batched/Cargo.toml
+++ b/wgpu_compress_32_batched/Cargo.toml
@@ -16,3 +16,4 @@ async-trait = { workspace = true }
 pollster = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 thiserror = { workspace = true }
+indicatif = "0.18.0"
