--- a/wgpu_compress_64_batched/Cargo.toml
+++ b/wgpu_compress_64_batched/Cargo.toml
@@ -17,3 +17,4 @@ async-trait = { workspace = true }
 pollster = "0.4.0"
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 thiserror = { workspace = true }
+indicatif = "0.18.0"
