add `final_compress`, `finalize`, `compute_s_shader` modules and `ChimpCompressorBatched64` updates for extended 64-bit GPU compression/decompression functionality

--- a/wgpu_compress_64_batched/Cargo.toml
+++ b/wgpu_compress_64_batched/Cargo.toml
@@ -2,7 +2,8 @@
 name = "wgpu_compress_64_batched"
 version = "0.1.0"
 edition = "2024"
-
+[profile.dev]
+opt-level = 0
 [dependencies]
 compress_utils = { path = "../compress_utils" }
 wgpu_compress_32_batched = { path = "../wgpu_compress_32_batched" }
