--- a/wgpu_compress_64_batched/Cargo.toml
+++ b/wgpu_compress_64_batched/Cargo.toml
@@ -2,8 +2,8 @@
 name = "wgpu_compress_64_batched"
 version = "0.1.0"
 edition = "2024"
-[profile.dev]
-opt-level = 0
+
+
 [dependencies]
 compress_utils = { path = "../compress_utils" }
 wgpu_compress_32_batched = { path = "../wgpu_compress_32_batched" }
@@ -19,3 +19,4 @@ pollster = "0.4.0"
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 thiserror = { workspace = true }
 indicatif = "0.18.0"
+once_cell = "1.21.3"
