--- a/wgpu_compress_32_batched/Cargo.toml
+++ b/wgpu_compress_32_batched/Cargo.toml
@@ -17,3 +17,4 @@ pollster = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 thiserror = { workspace = true }
 indicatif = "0.18.0"
+serde = { version = "1.0.217", features = ["derive"] }
