<checkpoint>add new shaders for compression and decompression: include initial buffer setup, compression logic, decompression flow, and finalized size calculations; integrate with updated Rust logic for GPU operations and buffer handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "wgpu_compress_32_batched",
     "wgpu_compress_64_batched",
     "api"
-]
+, "wgpu_compress_32_n_batched"]
 resolver = "3"
 
 
