--- a/wgpu_compress_32_n_batched/Cargo.toml
+++ b/wgpu_compress_32_n_batched/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 bytemuck = { version = "1.23.1", features = ["derive"] }
-wgpu = { workspace = true }
+wgpu = { version = "26.0.0", features = ["wgsl", "webgpu"] }
 wgpu-types = { workspace = true }
 bit-vec = { workspace = true }
 async-trait = { workspace = true }
