refactor compression and decompression logic: update shader workgroup size to 256, add total thread and last index calculations, enhance output checks, improve performance with divided workgroups, and remove redundant CHIMP buffer size setting

--- a/wgpu_compress_32_batched/Cargo.toml
+++ b/wgpu_compress_32_batched/Cargo.toml
@@ -9,8 +9,8 @@ anyhow = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 bytemuck = { version = "1.23.1", features = ["derive"] }
-wgpu = { workspace = true }
-wgpu-types = { workspace = true }
+wgpu = { version = "26.0.0" }
+wgpu-types = { version = "26.0.0" }
 bit-vec = { workspace = true }
 async-trait = { workspace = true }
 pollster = { workspace = true }
