--- a/wgpu_compress_32_n_batched/Cargo.toml
+++ b/wgpu_compress_32_n_batched/Cargo.toml
@@ -17,3 +17,4 @@ async-trait = { workspace = true }
 pollster = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 thiserror = { workspace = true }
+csv = "1.4.0"
