--- a/wgpu_compress_64_batched/Cargo.toml
+++ b/wgpu_compress_64_batched/Cargo.toml
@@ -20,3 +20,4 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 thiserror = { workspace = true }
 indicatif = "0.18.0"
 once_cell = "1.21.3"
+csv = "1.4.0"
