--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ tracing = "0.1.41"
 chrono = "0.4.41"
 thiserror = "2.0.12"
 pollster = "0.4.0"
+serde = { version = "1.0.217", features = ["derive"] }
+csv = { version = "1.4.0" }
